--- a/sheet.css
+++ b/sheet.css
@@ -9,9 +9,9 @@ body {
   .wrapper {
     position: absolute;
     width: 100%;
-    background: #24C6DC; 
-    background: -webkit-linear-gradient(to bottom, #514A9D, #24C6DC);  
-    background: linear-gradient(to bottom, #514A9D, #24C6DC);
+    background: #dc24ba; 
+    background: -webkit-linear-gradient(to bottom, #514A9D, #dc24ba);  
+    background: linear-gradient(to bottom, #514A9D, #dc24ba);
     min-height: 100vh;
   }
   
@@ -136,7 +136,7 @@ div,h1{
 #sim:hover{
     transition: 0.5s;
     transform: scale(1.2);
-    background-color: #ff79c6;
+    background-color: #24C6DC;
     
 }
 .tenor-gif-embed{
@@ -153,4 +153,8 @@ div,h1{
 
 body {
   overflow: auto;
+}
+
+details:hover{
+  cursor: pointer;
 }
